--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <title>{% block title %}{{ controller_name }}{% endblock %}</title>
+        <link rel="icon" href="https://www.1min30.com/wp-content/uploads/2018/05/Couleur-logo-P%C3%B4le-Emploi.jpg">
         {% block stylesheets %}
         {% endblock %}
 
@@ -12,6 +12,14 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <header>
+        {% include 'header-nav.html.twig' %}
+    </header>
+
+    <main>
+        {% block body %}
+            <div class="container">
+        {% endblock %}
+    </main>
     </body>
 </html>
